# HomeGuard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GNHL  GNHL.cmd  README.md  compile_android.bat  compile_exe.bat  electron-builder.json  package-lock.json  package.json  pyproject.toml  run.bat  run_electron.bat  run_homeguard_chat.bat  update_definitions.bat
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: security.yml  tests.yml  windows-release.yml
docs/: AI_BRIDGE.md  POWERSPOIT_RESISTANCE.md  PRODUCTION_READINESS.md  README.md  RELEASE_SIGNING.md  SECURITY.md  SECURITY_DEFINITIONS.md
docs/design/: PER_DEVICE_CLOUD_MAP.md
docs/release/: BRANCH_PROTECTION.md  BUILD_AND_SIGNING.md  RELEASE_CHECKLIST.md  SIGNING.md
docs/security/: PRIVACY_REVIEW.md  SECURITY_REVIEW.md
electron/: ai_bridge_ipc.js  main.js  main.secure.js  preload.js  privacy_utils.js  report_assistant_ipc.js  smoke.js
electron/renderer/: ai-settings.js  chat-assistant.js  index.html  overview.js  renderer.js  scan-indicator.css  scan-orb-3d.js  scan-progress-chat.js  styles.css
installer/: homeguard.iss
mobile/android/: README.md  buildozer.spec  main.py
scripts/: build_electron.py  build_exe.py  build_macos.py  build_windows_installer.ps1  cli.js  compile_android.sh  compile_macos.sh  notarize_macos.sh  release_gate.ps1  security_release_gate.py  sign_windows_artifact.ps1  verify_windows_signature.ps1
src/greynoc_homeguard/: __init__.py  ai_bridge.py  ai_memory.py  ai_tools.py  ai_traffic.py  baseline.py  cli.py  cli_launcher.py  custom_rules.py  dashboard.py  definition_schema.py  definitions.py  detection.py  device_resolution.py  diff.py  endpoint_abuse_signatures.py  engine.py  firewall.py  flow_source.py  gui.py  gui_launcher.py  guidance.py  history.py  identity_resolution.py  logging_setup.py  models.py  network.py  network_map.py  paths.py  playbooks.py  privacy.py  protection.py  quarantine.py  realtime.py  remediation.py  reports.py  scan_runner.py  scheduler.py  settings.py  (+4 more)
tests/: test_ai_bridge.py  test_ai_memory.py  test_ai_tools.py  test_ai_traffic.py  test_clear_risk_and_this_device.py  test_cli_smoke.py  test_consumer_guidance.py  test_definition_schema.py  test_device_resolution.py  test_edr_assessment.py  test_electron_security_static.py  test_endpoint_abuse_signatures.py  test_flow_source.py  test_homeguard.py  test_identity_resolution.py  test_network_map.py  test_ondemand_scan.py  test_overview_dashboard.py  test_playbooks.py  test_quarantine.py  test_realtime.py  test_signed_feed.py  test_windows_privesc_audit.py
(+8 files in other folders)
